[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expense_tracker"
version = "0.1.0"
description = "A custom CLI tool called expense"
dependencies = []  # Add third-party libraries like 'click' or 'typer' here if you use them

[project.scripts]
expense = "expense_tracker.app:main"